# VFSOC-ML-Models

./: .gitignore  CLEAN_PROJECT_SUMMARY.md  GOOGLE_COLAB_INSTRUCTIONS.md  PROJECT_SUMMARY.md  README.md  convert_model_direct.py  example_usage.py  pyproject.toml  requirements.txt
config/: energy_consumption_config.yaml  feature_config.yaml  ignition_behavior_config.yaml  model_config.yaml  sensor_spike_config.yaml  training_config.yaml
docs/: VFSOC_ML_Training.ipynb  google_colab_training_guide.md
notebooks/: 01_data_exploration.ipynb
scripts/: complete_workflow.py  convert_to_onnx.py  generate_large_dataset.py  generate_synthetic_data.py  global_accuracy_testing.py  high_accuracy_training_workflow.py  test_ev_charging_model.py  train_advanced_models.py  train_ev_charging_anomaly_model_simple.py  train_model.py
src/vfsoc_ml/: __init__.py
src/vfsoc_ml/data/: __init__.py  data_loader.py  feature_engineering.py  synthetic_generator.py
src/vfsoc_ml/deployment/: __init__.py  onnx_converter.py
src/vfsoc_ml/models/: __init__.py  advanced_models.py  base_model.py  ev_charging_anomaly_detector.py  isolation_forest.py
src/vfsoc_ml/preprocessing/: enhanced_feature_extractor.py
src/vfsoc_ml/utils/: __init__.py  logger.py  metrics.py  visualization.py
